Update spec, add rtl skeleton.

--- a/docs/spec.org
+++ b/docs/spec.org
@@ -33,25 +33,29 @@ byte).
 
 ** Description
 #+ATTR_LATEX: :align |l|l|l|l|l|
-|---------------+---------+--------+--------------------------------------+-------------|
-| *Signal Name* | *Width* | *Type* | *Description*                        | *Drive*     |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =rst=         |       1 | Input  | Reset device                         | Active low  |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =clk=         |       1 | Input  | Free running clock                   | Square wave |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =w_en=        |       1 | Input  | Write enable                         | Active high |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =din=         |       8 | Input  | Input for WRITE operation.           | Active high |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =r_en=        |       1 | Input  | Read enable                          | Active high |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =dout=        |       8 | Output | Output of READ operation.            | Active high |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =full=        |       1 | Output | Lowered when FIFO is full.           | Active low  |
-|---------------+---------+--------+--------------------------------------+-------------|
-| =empty=       |       1 | Output | Lowered when FIFO is empty/on reset. | Active low  |
-|---------------+---------+--------+--------------------------------------+-------------|
+|---------------+---------+--------+-------------------------------------------+-------------|
+| *Signal Name* | *Width* | *Type* | *Description*                             | *Drive*     |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =rst=         |       1 | Input  | Reset device                              | Active low  |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =clk=         |       1 | Input  | Free running clock                        | Square wave |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =w_en=        |       1 | Input  | Write enable                              | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =din=         |       8 | Input  | Input for WRITE operation.                | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =r_en=        |       1 | Input  | Read enable                               | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =dout=        |       8 | Output | Output of READ operation.                 | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =full=        |       1 | Output | Raised when FIFO is full.                 | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =empty=       |       1 | Output | Raised when FIFO is empty/on reset.       | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =overflow=    |       1 | Output | Raised if write is attempted when =full=. | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
+| =underflow=   |       1 | Output | Raised if read is attempted when =empty=. | Active high |
+|---------------+---------+--------+-------------------------------------------+-------------|
 
 ** Verilog
 #+begin_src verilog
@@ -63,7 +67,9 @@ byte).
      r_en,
      dout,
      full,
-     empty
+     empty,
+     overflow,
+     underflow
      );
 
     input          rst;
@@ -74,6 +80,8 @@ byte).
     output [7:0]   dout;
     output         full;
     output         empty;
+    output         overflow;
+    output         underflow;
 
   endmodule
 #+end_src
